--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
+    "@react-three/drei": "^9.13.0",
+    "@react-three/fiber": "^8.0.12",
     "@types/lodash": "^4.14.182",
+    "@types/three": "^0.141.0",
     "axios": "^0.27.2",
-    "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.40",
